# MarsEngine

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  run_engine_script
Mars/: CMakeLists.txt  Makefile  cmake_install.cmake
Mars/res/: HotReload.txt  Test.shader  light.fs  light.vs  model.fs  model.vs  test_fs.fs  test_vs.vs
Mars/src/: Mars.h  Test.cpp  Test.h
Mars/src/Mars/: Application.cpp  Application.h  Audio.h  Camera.h  Collision.h  Core.h  Debug.h  EntryPoint.h  GLFunctions.h  GLShader.h  Globals.h  Input.h  Log.h  MMath.h  MVector.h  Model.h  Renderer.h  Surface.h  SystemsManager.h  Texture.h  Utils.h  d3dx12.h  glext.h  mat4.h  vec2.h  vec3.h  vec4.h  wglext.h
TestGame/: CMakeLists.txt  Makefile  TestGame  cmake_install.cmake
TestGame/src/: Game.cpp
docs/src/: Mars.html
docs/src/Mars/: Application.html  Audio.html  Collision.html  Core.html  Debug.html  EntryPoint.html  Input.html  MMath.html  MVector.html  Renderer.html  Surface.html  Utils.html  mat4.html  vec3.html  vec4.html
